@@ -133,7 +133,7 @@
                 <package-root>build/generated/business</package-root>
                 <package-root>build/generated/web</package-root>
                 <package-root>tests</package-root>
-                <classpath mode="compile">tools/lib/commons-betwixt-1.0-beta-1.jar:tools/lib/commons-codec-1.3.jar:tools/lib/commons-httpclient-2.0.2.jar:tools/lib/concurrent-1.3.2.jar:tools/lib/jaxen-full.jar:tools/lib/jdom.jar:tools/lib/log4j-1.2.11.jar:tools/lib/lucene-1.4.3.jar:tools/lib/rome-0.9.jar:tools/lib/rome-fetcher-0.9.jar:tools/lib/saxpath.jar:tools/lib/taglibs-string.jar:tools/lib/velocity-1.4.jar:tools/lib/velocity-dep-1.4.jar:tools/lib/xmlrpc-1.2-b1.jar:tools/hibernate-3.1/hibernate3.jar:tools/hibernate-3.1/lib/asm-attrs.jar:tools/hibernate-3.1/lib/asm.jar:tools/hibernate-3.1/lib/cglib-2.1.3.jar:tools/hibernate-3.1/lib/dom4j-1.6.1.jar:tools/hibernate-3.1/lib/ehcache-1.1.jar:tools/hibernate-3.1/lib/jdbc2_0-stdext.jar:tools/hibernate-3.1/lib/jta.jar:tools/spring-1.2/acegi-security-1.0.1.jar:tools/spring-1.2/spring.jar:tools/struts-1.2.4/lib/antlr.jar:tools/struts-1.2.4/lib/commons-beanutils.jar:tools/struts-1.2.4/lib/commons-collections.jar:tools/struts-1.2.4/lib/commons-digester.jar:tools/struts-1.2.4/lib/commons-fileupload.jar:tools/struts-1.2.4/lib/commons-lang-2.0.jar:tools/struts-1.2.4/lib/commons-logging.jar:tools/struts-1.2.4/lib/commons-validator.jar:tools/struts-1.2.4/lib/jakarta-oro.jar:tools/struts-1.2.4/lib/struts-el.jar:tools/struts-1.2.4/lib/struts.jar:tools/jpa/toplink-essentials.jar</classpath>
+                <classpath mode="compile">tools/lib/commons-betwixt-1.0-beta-1.jar:tools/lib/commons-codec-1.3.jar:tools/lib/commons-httpclient-2.0.2.jar:tools/lib/concurrent-1.3.2.jar:tools/lib/jaxen-full.jar:tools/lib/jdom.jar:tools/lib/log4j-1.2.11.jar:tools/lib/lucene-1.4.3.jar:tools/lib/rome-0.9.jar:tools/lib/rome-fetcher-0.9.jar:tools/lib/saxpath.jar:tools/lib/taglibs-string.jar:tools/lib/velocity-1.4.jar:tools/lib/velocity-dep-1.4.jar:tools/lib/xmlrpc-1.2-b1.jar:tools/hibernate-3.1/hibernate3.jar:tools/hibernate-3.1/lib/asm-attrs.jar:tools/hibernate-3.1/lib/asm.jar:tools/hibernate-3.1/lib/cglib-2.1.3.jar:tools/hibernate-3.1/lib/dom4j-1.6.1.jar:tools/hibernate-3.1/lib/ehcache-1.1.jar:tools/hibernate-3.1/lib/jdbc2_0-stdext.jar:tools/hibernate-3.1/lib/jta.jar:tools/spring-1.2/acegi-security-1.0.1.jar:tools/spring-1.2/spring.jar:tools/struts-1.2.4/lib/antlr.jar:tools/struts-1.2.4/lib/commons-beanutils.jar:tools/struts-1.2.4/lib/commons-collections.jar:tools/struts-1.2.4/lib/commons-digester.jar:tools/struts-1.2.4/lib/commons-fileupload.jar:tools/struts-1.2.4/lib/commons-lang-2.0.jar:tools/struts-1.2.4/lib/commons-logging.jar:tools/struts-1.2.4/lib/commons-validator.jar:tools/struts-1.2.4/lib/jakarta-oro.jar:tools/struts-1.2.4/lib/struts-el.jar:tools/struts-1.2.4/lib/struts.jar:tools/jpa/toplink-essentials.jar:tools/buildtime/junit-3.8.1.jar</classpath>
                 <source-level>1.5</source-level>
             </compilation-unit>
         </java-data>
